  mail, message sur les pointages de menus incidents.
- Possibilité de déléguer à un professeur le pointage du statut effectué ou non
  d'une sanction (cas d'une sanction effectuée dans la salle d'un professeur).
- Possibilité pour un enseignant de limiter aux élèves de ses groupes l'envoi 
  de courriel lors des déclarations d'incidents

Absences2:
- Ajout de liens de création d'incident de puis mod_abs2 Saisir groupe.
- Accès à la liste des saisies de la veille pour tel élève depuis la colonne 
  Veille dans Absences du jour.

Cahiers de textes:
- Possibilité d'ajouter un témoin 'contrôle' dans les travaux à faire du CDT.
- Page résumé/simplifiée élève : Précision des dates de travaux futurs en title.

Carnet de notes:
- Affichage du nombre de notes inférieures/supérieures à 10.
- Accès en statut autre à la Visualisation des moyennes de carnets de notes (ajout d'un droit).

Bulletins:
- Accès en statut autre au Tableau récapitulatif des moyennes d'une classe dans 
  le cas où l'utilisateur a accès aux bulletins simplifiés ou non.
- Ajout d'un formulaire de paramètres communs aux bulletins HTML et PDF.
- Possibilité d'imprimer le bulletin des appréciations/synthèse sur les groupes 
  intercalés ou en recto/verso des bulletins élèves.
- Possibilité de définir un seuil pour le témoin d'évolution de la moyenne dans les bulletins PDF.

Panneau d'affichage:
- Possibilité de déposer un message pour les professeurs principaux.

Publipostage OOo:
- Possibilité d'autoriser tel utilisateur en particulier à uploader des modèles.

Engagements:
- Possibilité de déléguer la saisie de certains engagements aux professeurs principaux.

Général:
- Possibilité de prendre en compte un secure/proxy.php pour file_get_contents()
- Automatisation du changement de PP et de CPE lors du changement de classe.
- Ajout d'une option pour désactiver la vérification du certificat SSL lors des requêtes CAS.
  Jusqu'à la version 1.6.8, la vérification n'était pas imposée.
  Elle l'est maintenant.