@@ -25,6 +25,8 @@ Discipline:
   d'une sanction (cas d'une sanction effectuée dans la salle d'un professeur).
 - Possibilité pour un enseignant de limiter aux élèves de ses groupes l'envoi 
   de courriel lors des déclarations d'incidents
+- Possibilité de déposer, via Publipostage OOo, un fichier modèle avertissement_fin_periode.odt 
+  propre à tel ou tel utilisateur (par exemple pour y inclure la signature).
 
 Absences2:
 - Ajout de liens de création d'incident de puis mod_abs2 Saisir groupe.
